--- a/_posts/2019-08-13-1.md
+++ b/_posts/2019-08-13-1.md
@@ -107,9 +107,9 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 **SW:** Oczywiście, że tak. Jakbyś nie miał Agile na sztandarach albo mikro serwisów też na sztandarach, to ludzi nie zatrudnisz tak naprawdę.
 
-**ŁK:** Tak i przez ten brak liczb, środki nacisku często zaczyna się w budowanie Google Skill.
+**ŁK:** Tak i przez ten brak liczb, środki nacisku często zaczyna się w budowanie Google Scale.
 
-**SW:** Zawsze budujemy Google Skill. To jest niesamowite, jak chcemy budując Google Skill de facto sami wrzucamy się w problemy skali Google, czyli zarządzania tym wszystkim i tak dalej. To jest przerażające jak ludzie chcą dużo na swoje barki wziąć.
+**SW:** Zawsze budujemy Google Scale. To jest niesamowite, jak chcemy budując Google Scale de facto sami wrzucamy się w problemy skali Google, czyli zarządzania tym wszystkim i tak dalej. To jest przerażające jak ludzie chcą dużo na swoje barki wziąć.
 
 **ŁK:** Tak. Jest robienie takie over inżynieringu po to, żeby to było skalowalne, zapominając o takich bardzo podstawowych wzorcach. Chyba dla mnie takie dwa najcięższe, które są to jest skalowanie horyzontalne, ale zrobione też na warstwie danych, czyli nie tylko load balancing aplikacji, ale też danych. Ludzie, że tak powiem spuszczają się, żeby zrobić to nie wiadomo, co, a nie biorą podstawowych rzeczy. Monolit jak wspomniałeś, jak weźmiemy właśnie distributed casche, sharding danych i horyzontem skanowanie samych instancji, on w większości przypadków będzie działał.
 
